# SceneDB

./: Cargo.toml  README.md
crates/pulsar_scenedb/: Cargo.toml
crates/pulsar_scenedb/benches/: ecs_bench.rs  ecs_detailed_bench.rs  gpu_timing.rs  hotpath_profiler.rs  legacy_model_bench.rs  scenedb_bench.rs
crates/pulsar_scenedb/examples/: stress_tui.rs  telemetry_demo.rs
crates/pulsar_scenedb/src/: actor.rs  archetype.rs  cell.rs  cell_type.rs  component.rs  component_store.rs  entity.rs  handle.rs  lease.rs  lib.rs  liveness.rs  page.rs  query.rs  registry.rs  schedule.rs  simd.rs  snapshot.rs  spatial.rs  telemetry.rs  time.rs  token.rs  world.rs
crates/pulsar_scenedb/src/gpu/: assets.rs  buffer.rs  context.rs  dirty.rs  generation.rs  grid.rs  harvest.rs  mod.rs  phase.rs  region.rs  scene_store.rs  tracker.rs  view_upload.rs
crates/pulsar_scenedb/tests/: adversarial.rs  alloc_gate.rs  alloc_gate_gpu.rs  contention.rs  gpu_assets.rs  gpu_harvest.rs  gpu_layout.rs  gpu_store.rs  stale_handle.rs  stress.rs  stress_gpu.rs
crates/pulsar_scenedb_derive/: Cargo.toml
crates/pulsar_scenedb_derive/src/: cell.rs  gpu.rs  lib.rs  scene_store.rs
crates/scenedb_dashboard/: .gitignore  Cargo.toml  build.rs
crates/scenedb_dashboard/dashboard/: package-lock.json  package.json  tailwind.config.ts
crates/scenedb_dashboard/dashboard/src/app/: LayoutClient.tsx  globals.css  layout.tsx  page.tsx
crates/scenedb_dashboard/dashboard/src/app/cell/: page.tsx
crates/scenedb_dashboard/dashboard/src/app/cell-detail/: page.tsx
crates/scenedb_dashboard/dashboard/src/app/cells/: page.tsx
crates/scenedb_dashboard/dashboard/src/app/gpu/: page.tsx
crates/scenedb_dashboard/dashboard/src/app/pools/: page.tsx
crates/scenedb_dashboard/dashboard/src/app/queries/: page.tsx
crates/scenedb_dashboard/dashboard/src/app/schema/: page.tsx
crates/scenedb_dashboard/dashboard/src/components/: QueryShell.tsx  Sidebar.tsx  StatCard.tsx
crates/scenedb_dashboard/dashboard/src/lib/: api.ts
crates/scenedb_dashboard/src/: main.rs  proxy.rs
