[workspace]
members = [
    "crates/pulsar_scenedb",
    "crates/pulsar_scenedb_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/SceneDB"
rust-version = "1.81"
authors = ["Tristan J. Poland"]

[workspace.dependencies]
serde_json = "1.0.149"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.5"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
