[package]
name = "pulsar_scenedb_derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro derive for SceneStore component types"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
